--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@ padding: 20px;
 background-color: #f0f0f0;
 }
 h1 {
-    color: #0066cc
+    color: #0066cc;
 }
 
 p{
-    color:#ffffff;
+    color: #ffffff;
 }
 .T {
-    color:#ffffff;
+    color: #ffffff;
 }
