--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     font-family:Arial, sans.serif;
 margin: 0;
 padding: 20px;
-background-color: #f0f0f0;
+background-color: #f2t8c9;
 }
 h1 {
     color: #0066cc;
