--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     font-family:Arial, sans.serif;
 margin: 0;
 padding: 20px;
-background-color: #fff0f0;
+background-image:url("download.jpg");
 }
 h1 {
     color: #0066cc;
