--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     font-family:Arial, sans.serif;
 margin: 0;
 padding: 20px;
-background-image:url("download.jpg");
+background-image:url("https://cz.pinterest.com/pin/pin-de-dani-en-dreamcars--38632509295975836/");
 }
 h1 {
     color: #0066cc;
