--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     font-family:Arial, sans.serif;
 margin: 0;
 padding: 20px;
-background-image:url("https://cz.pinterest.com/pin/972073900853665789/");
+background-image:url("https://i.pinimg.com/736x/32/f0/11/32f011bb45732c2609524b1c6b7fdc9d.jpg");
 }
 h1 {
     color: #0066cc;
